[fix]overflow

--- a/src/assets/scss/partials/_general.scss
+++ b/src/assets/scss/partials/_general.scss
@@ -1,5 +1,5 @@
 body {
-  overflow-x: auto !important;
+  overflow-x: hidden !important;
   width: 99vw !important;
   .container-fluid {
     --bs-gutter-x: 0 !important;
